--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,10 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather&display=swap"
+      rel="stylesheet"
+    />
     <title>Welcome to Your Office Management System</title>
   </head>
   <body>
