task complete component complete

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Merriweather&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <title>Welcome to Your Office Management System</title>
   </head>
   <body>
